--- a/frontend/index.html
+++ b/frontend/index.html
@@ -126,6 +126,96 @@
                         <a href="articles/ultra_weekend_feb1.html">Read More</a>
                     </div>
                     <div class="article-card">
+                        <img src="images/ultra_feb8weekend.jpg" alt="Redtail Ridge and Lone Cactus" />
+                        <h3>Ultra Recap: Feb 8–9</h3>
+                        <p>PRs on desert trails and snowy ridgelines marked this weekend.</p>
+                        <a href="articles/ultra_weekend_feb8.html">Read More</a>
+                    </div>
+                    <div class="article-card">
+                        <img src="images/ultra_feb15weekend.jpg" alt="Lovers Leap 50k" />
+                        <h3>Ultra Recap: Feb 15–16</h3>
+                        <p>Romantic races and solo missions alike on Valentine’s weekend.</p>
+                        <a href="articles/ultra_weekend_feb15.html">Read More</a>
+                    </div>
+                    <div class="article-card">
+                        <img src="images/ultra_feb22weekend.jpg" alt="River Trail Ultra" />
+                        <h3>Ultra Recap: Feb 22–23</h3>
+                        <p>River crossings, loop races, and final February finishes.</p>
+                        <a href="articles/ultra_weekend_feb22.html">Read More</a>
+                    </div>
+                    <div class="article-card">
+                        <img src="images/ultra_mar1weekend.jpg" alt="March kickoff trail ultra" />
+                        <h3>Ultra Recap: Mar 1–2</h3>
+                        <p>March began with fast feet and fresh legs across the U.S.</p>
+                        <a href="articles/ultra_weekend_mar1.html">Read More</a>
+                    </div>
+                    <div class="article-card">
+                        <img src="images/ultra_mar8weekend.jpg" alt="Woodlands and ridgelines" />
+                        <h3>Ultra Recap: Mar 8–9</h3>
+                        <p>Woodsy challenges and record chases on diverse terrain.</p>
+                        <a href="articles/ultra_weekend_mar8.html">Read More</a>
+                    </div>
+                    <div class="article-card">
+                        <img src="images/ultra_mar15weekend.jpg" alt="High altitude runners" />
+                        <h3>Ultra Recap: Mar 15–16</h3>
+                        <p>Altitude gains and late-winter grit defined this week.</p>
+                        <a href="articles/ultra_weekend_mar15.html">Read More</a>
+                    </div>
+                    <div class="article-card">
+                        <img src="images/ultra_mar22weekend.jpg" alt="Couples trail run" />
+                        <h3>Ultra Recap: Mar 22–23</h3>
+                        <p>Spring begins with scenic mountain trails and close finishes.</p>
+                        <a href="articles/ultra_weekend_mar22.html">Read More</a>
+                    </div>
+                    <div class="article-card">
+                        <img src="images/ultra_mar29weekend.jpg" alt="Women's trail squad" />
+                        <h3>Ultra Recap: Mar 29–30</h3>
+                        <p>Powerful women’s finishes and final March milestones.</p>
+                        <a href="articles/ultra_weekend_mar29.html">Read More</a>
+                    </div>
+                    <div class="article-card">
+                        <img src="images/ultra_apr5weekend.jpg" alt="Snowy ridge race" />
+                        <h3>Ultra Recap: Apr 5–6</h3>
+                        <p>Snow-covered climbs and icy course records out west.</p>
+                        <a href="articles/ultra_weekend_apr5.html">Read More</a>
+                    </div>
+                    <div class="article-card">
+                        <img src="images/ultra_apr12weekend.jpg" alt="Spring bloom trail" />
+                        <h3>Ultra Recap: Apr 12–13</h3>
+                        <p>Spring blooms and fast finishes from coast to coast.</p>
+                        <a href="articles/ultra_weekend_apr12.html">Read More</a>
+                    </div>
+                    <div class="article-card">
+                        <img src="images/ultra_apr19weekend.jpg" alt="Hiking poles and alpine peaks" />
+                        <h3>Ultra Recap: Apr 19–20</h3>
+                        <p>High altitude efforts and European races steal the show.</p>
+                        <a href="articles/ultra_weekend_apr19.html">Read More</a>
+                    </div>
+                    <div class="article-card">
+                        <img src="images/ultra_apr26weekend.jpg" alt="Steep alpine trail runner" />
+                        <h3>Ultra Recap: Apr 26–27</h3>
+                        <p>Vertical trail races and wild weather hit this weekend.</p>
+                        <a href="articles/ultra_weekend_apr26.html">Read More</a>
+                    </div>
+                    <div class="article-card">
+                        <img src="images/ultra_may3weekend.jpg" alt="Long dirt path in woods" />
+                        <h3>Ultra Recap: May 3–4</h3>
+                        <p>Speed, heat, and unexpected newcomers led May’s debut.</p>
+                        <a href="articles/ultra_weekend_may3.html">Read More</a>
+                    </div>
+                    <div class="article-card">
+                        <img src="images/ultra_may10weekend.jpg" alt="Road ultrarunners in heat" />
+                        <h3>Ultra Recap: May 10–11</h3>
+                        <p>Scenic roads, relentless climbs, and sun-drenched finishes.</p>
+                        <a href="articles/ultra_weekend_may10.html">Read More</a>
+                    </div>
+                    <div class="article-card">
+                        <img src="images/ultra_may17weekend.jpg" alt="Downhill rocky trail runners" />
+                        <h3>Ultra Recap: May 17–18</h3>
+                        <p>Rocky descents and world-class efforts on technical trails.</p>
+                        <a href="articles/ultra_weekend_may17.html">Read More</a>
+                    </div>
+                    <div class="article-card">
                         <img src="images/ultra_may24weekend.jpg" alt="Memorial Day races" />
                         <h3>Ultra Recap: May 24–26</h3>
                         <p>Memorial Day weekend delivered PRs and course records.</p>
