--- a/frontend/comments.html
+++ b/frontend/comments.html
@@ -15,8 +15,7 @@
       <ul class="menu">
         <li><a href="index.html">Home</a></li>
         <li><a href="race_directory.html">Race Directory</a></li>
-        <li><a href="articles.html">Articles</a></li>
-        <li><a href="forum.html">Forum</a></li>
+        <li><a href="forum.html">Runner Community/a></li>
         <li id="account-tab" class="auth-tab"></li>
       </ul>
     </nav>
