--- a/frontend/profile_edit.html
+++ b/frontend/profile_edit.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Edit Profile - Ultramarathon Finder</title>
+    <title>Edit Profile - Ultramarathon Connect</title>
     <link rel="stylesheet" href="style.css" />
 </head>
 
@@ -31,15 +31,18 @@
         <div class="profile-edit-wrapper">
             <h2>Edit Your Profile</h2>
             <img id="profile-pic" src="images/default-profile.png" alt="Profile Picture" class="profile-img" />
+
             <form id="upload-form">
                 <input type="file" id="profile-picture" name="profilePicture" accept="image/*" />
                 <button type="button" id="upload-button">Upload Picture</button>
             </form>
+
             <form id="profile-form">
                 <input type="text" id="username" name="username" placeholder="Username" required />
                 <input type="email" id="email" name="email" placeholder="Email" required />
                 <button type="submit" class="orange-btn">Save Changes</button>
             </form>
+
             <p id="success-message" class="success-message" style="display: none;">Profile updated successfully!</p>
             <p id="error-message" class="error-message" style="display: none;">Error updating profile.</p>
         </div>
@@ -64,7 +67,7 @@
             if (token) {
                 const profilePic = localStorage.getItem("profilePicture");
                 accountTab.innerHTML = `
-          <div class="profile-dropdown">
+          <div class="dropdown">
             <img src="${profilePic || 'images/default-profile.png'}" class="profile-picture-nav" alt="Profile Picture" />
             <div class="dropdown-menu">
               <a href="account.html">Profile</a>
@@ -73,19 +76,12 @@
             </div>
           </div>
         `;
-
-                // Delay to ensure the element exists before attaching the event
-                setTimeout(() => {
-                    const logoutBtn = document.getElementById("logout-link");
-                    if (logoutBtn) {
-                        logoutBtn.addEventListener("click", () => {
-                            localStorage.removeItem("token");
-                            localStorage.removeItem("profilePicture");
-                            alert("You have been logged out.");
-                            window.location.href = "login.html";
-                        });
-                    }
-                }, 100);
+                document.getElementById("logout-link").addEventListener("click", () => {
+                    localStorage.removeItem("token");
+                    localStorage.removeItem("profilePicture");
+                    alert("You have been logged out.");
+                    window.location.href = "login.html";
+                });
             } else {
                 accountTab.innerHTML = `<a href="login.html">Login</a><a href="register.html">Register</a>`;
             }
@@ -99,7 +95,7 @@
         });
 
         async function loadProfile() {
-            const token = localStorage.getItem('token')?.trim();
+            const token = localStorage.getItem("token")?.trim();
             if (!token) {
                 alert("You are not logged in. Redirecting to login...");
                 window.location.href = "login.html";
@@ -111,8 +107,8 @@
                     method: 'GET',
                     headers: {
                         Authorization: `Bearer ${token}`,
-                        'Content-Type': 'application/json',
-                    },
+                        'Content-Type': 'application/json'
+                    }
                 });
 
                 if (response.ok) {
@@ -146,7 +142,7 @@
                 const response = await fetch('https://ultramarathon-finder-backend.onrender.com/api/auth/upload-profile-picture', {
                     method: 'POST',
                     headers: { Authorization: `Bearer ${token}` },
-                    body: formData,
+                    body: formData
                 });
 
                 if (response.ok) {
@@ -179,9 +175,9 @@
                     method: 'PUT',
                     headers: {
                         Authorization: `Bearer ${token}`,
-                        'Content-Type': 'application/json',
+                        'Content-Type': 'application/json'
                     },
-                    body: JSON.stringify({ username, email }),
+                    body: JSON.stringify({ username, email })
                 });
 
                 if (response.ok) {
