--- a/frontend/register.html
+++ b/frontend/register.html
@@ -27,7 +27,6 @@
         </div>
     </header>
 
-    <!-- Main -->
     <main>
         <div class="form-container">
             <div class="form-card">
@@ -47,7 +46,7 @@
                         <label for="password">Password:</label>
                         <input type="password" id="password" name="password" placeholder="Create a password" required />
                         <small>Password must be at least 6 characters long and include one uppercase letter, one number,
-                            and one special character.</small>
+                            and one symbol (e.g. !@#$%^&*.,?_~).</small>
                     </div>
 
                     <button type="submit" class="orange-btn">Register</button>
@@ -58,7 +57,6 @@
         </div>
     </main>
 
-    <!-- Footer -->
     <footer class="site-footer">
         <div class="footer-links">
             <a href="contact.html">Contact Us</a> |
@@ -70,7 +68,6 @@
         <p class="footer-copy">&copy; 2025 Ultramarathon Connect. All rights reserved.</p>
     </footer>
 
-    <!-- Script -->
     <script>
         document.getElementById('register-form').addEventListener('submit', async (e) => {
             e.preventDefault();
@@ -78,14 +75,18 @@
             const email = document.getElementById('email').value.trim();
             const password = document.getElementById('password').value.trim();
 
+            const messageEl = document.getElementById('register-message');
+            messageEl.textContent = '';
+            messageEl.className = '';
+
             if (!username || !email || !password) {
-                document.getElementById('register-message').textContent = 'Please fill in all fields.';
+                messageEl.textContent = 'Please fill in all fields.';
                 return;
             }
 
-            const passwordRegex = /^(?=.*[A-Z])(?=.*\d)(?=.*[!@#$%^&*()_\-+=])[A-Za-z\d!@#$%^&*()_\-+=]{6,}$/;
+            const passwordRegex = /^(?=.*[A-Z])(?=.*\d)(?=.*[^A-Za-z0-9])[A-Za-z\d\S]{6,}$/;
             if (!passwordRegex.test(password)) {
-                document.getElementById('register-message').textContent = 'Password does not meet the requirements.';
+                messageEl.textContent = 'Password must include at least 1 uppercase letter, 1 number, and 1 symbol.';
                 return;
             }
 
@@ -99,14 +100,14 @@
                 const data = await response.json();
 
                 if (response.ok) {
-                    document.getElementById('register-message').textContent = 'Registration successful! Redirecting to login...';
-                    document.getElementById('register-message').classList.add('success-message');
+                    messageEl.textContent = 'Registration successful! Redirecting to login...';
+                    messageEl.classList.add('success-message');
                     setTimeout(() => window.location.href = 'login.html', 2000);
                 } else {
-                    document.getElementById('register-message').textContent = data.message || 'Error: Registration failed.';
+                    messageEl.textContent = data.message || 'Error: Registration failed.';
                 }
             } catch {
-                document.getElementById('register-message').textContent = 'Error: Could not register user.';
+                messageEl.textContent = 'Error: Could not register user.';
             }
         });
     </script>
