--- a/frontend/forum/forum.html
+++ b/frontend/forum/forum.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Runner Community - Ultramarathon Connect</title>
-    <link rel="stylesheet" href="/style.css" />
-    <link rel="stylesheet" href="/alanai_chatbot/chat-widget.css" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="alanai_chatbot/chat-widget.css" />
 </head>
 
 <body class="forum-page">
@@ -23,17 +23,6 @@
                     <li><a href="race_directory.html">Race Directory</a></li>
                     <li><a href="forum.html">Runner Community</a></li>
                     <li id="account-tab" class="auth-tab"><a href="login.html">Login</a></li>
-                    <li class="dropdown auth-dropdown" style="display: none;">
-                        <a href="account.html">
-                            <img id="nav-profile-pic" src="/images/default-profile.png" alt="Profile"
-                                class="nav-profile-img" />
-                            <span id="nav-username">My Account</span>
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a href="account.html">View Profile</a></li>
-                            <li><a href="logout.html">Sign Out</a></li>
-                        </ul>
-                    </li>
                 </ul>
             </nav>
         </div>
@@ -43,48 +32,46 @@
         <h1 class="forum-heading">Runner-to-Runner Forum</h1>
         <p class="forum-subheading">Ask questions, share insights, and connect with ultrarunners around the world.</p>
 
-        <!-- Updated Category Cards -->
         <section class="forum-categories">
-            <a href="/forum/category.html?topic=Training%20Tips" class="category-card">
+            <a href="forum/category.html?topic=Training%20Tips" class="category-card">
                 <span class="emoji">🏋️</span>
                 <h3>Training Tips</h3>
                 <p>Strategies, plans, and advice from seasoned runners.</p>
             </a>
-            <a href="/forum/category.html?topic=Gear%20Recommendations" class="category-card">
+            <a href="forum/category.html?topic=Gear%20Recommendations" class="category-card">
                 <span class="emoji">🎒</span>
                 <h3>Gear Recommendations</h3>
                 <p>Discuss your favorite gear for trails, races, and recovery.</p>
             </a>
-            <a href="/forum/category.html?topic=Race%20Advice" class="category-card">
+            <a href="forum/category.html?topic=Race%20Advice" class="category-card">
                 <span class="emoji">🥇</span>
                 <h3>Race Advice</h3>
                 <p>Tips on race strategy, pacing, and preparation.</p>
             </a>
-            <a href="/forum/category.html?topic=Nutrition%20Tips" class="category-card">
+            <a href="forum/category.html?topic=Nutrition%20Tips" class="category-card">
                 <span class="emoji">🥗</span>
                 <h3>Nutrition Tips</h3>
                 <p>Talk about fueling, hydration, and supplements.</p>
             </a>
-            <a href="/forum/category.html?topic=Meetup%20Requests" class="category-card">
+            <a href="forum/category.html?topic=Meetup%20Requests" class="category-card">
                 <span class="emoji">🤝</span>
                 <h3>Meetup Requests</h3>
                 <p>Looking to find a training buddy or local group? Post here.</p>
             </a>
-            <a href="/forum/category.html?topic=General%20Chat" class="category-card">
+            <a href="forum/category.html?topic=General%20Chat" class="category-card">
                 <span class="emoji">💬</span>
                 <h3>General Chat</h3>
                 <p>Talk about anything ultrarunning related!</p>
             </a>
         </section>
 
-        <!-- 🔥 Training Groups Section -->
         <section class="training-groups-section">
             <h2>📍 Training Groups by Race</h2>
             <p>Join or create a training group for an upcoming ultramarathon you're running!</p>
 
             <div class="training-group">
                 <h4>
-                    <a href="/forum/group_forum.html?group=Western%20States%20100%20(CA)">Western States 100 (CA)</a>
+                    <a href="forum/group_forum.html?group=Western%20States%20100%20(CA)">Western States 100 (CA)</a>
                 </h4>
                 <p>Group for runners training for Western States. Weekly Zoom calls + local meetups in NorCal.</p>
                 <button class="join-btn">Join Group</button>
@@ -92,13 +79,13 @@
 
             <div class="training-group">
                 <h4>
-                    <a href="/forum/group_forum.html?group=UTMB%20(France)">UTMB (France)</a>
+                    <a href="forum/group_forum.html?group=UTMB%20(France)">UTMB (France)</a>
                 </h4>
                 <p>Global group for UTMB training. Share routes, advice, and gear picks.</p>
                 <button class="join-btn">Join Group</button>
             </div>
 
-            <a href="/forum/create_group.html" class="create-group-btn">+ Create New Training Group</a>
+            <a href="forum/create_group.html" class="create-group-btn">+ Create New Training Group</a>
         </section>
     </main>
 
@@ -114,33 +101,39 @@
 
     <footer class="site-footer">
         <div class="footer-links">
-            <a href="/contact.html">Contact Us</a> |
-            <a href="/privacy.html">Privacy Policy</a> |
-            <a href="/termsofservice.html">Terms of Service</a> |
-            <a href="/faq.html">FAQ</a> |
+            <a href="contact.html">Contact Us</a> |
+            <a href="privacy.html">Privacy Policy</a> |
+            <a href="termsofservice.html">Terms of Service</a> |
+            <a href="faq.html">FAQ</a> |
             <span>Email: <a href="mailto:ultramarathonconnect@gmail.com">ultramarathonconnect@gmail.com</a></span>
         </div>
         <p class="footer-copy">&copy; 2025 Ultramarathon Connect. All rights reserved.</p>
     </footer>
 
-    <script src="/forum/forum_script.js"></script>
-    <script src="/index_script.js"></script>
-    <script src="/alanai_chatbot/alan.js"></script>
+    <script src="forum/forum_script.js"></script>
+    <script src="index_script.js"></script>
+    <script src="alanai_chatbot/alan.js"></script>
 
-    <!-- Auth-based header script -->
+    <!-- Inject dropdown if logged in -->
     <script>
         const token = localStorage.getItem("token");
         const username = localStorage.getItem("username");
         const profilePic = localStorage.getItem("profilePicture");
 
         if (token && username) {
-            document.querySelector(".auth-tab").style.display = "none";
-            const dropdown = document.querySelector(".auth-dropdown");
-            if (dropdown) {
-                dropdown.style.display = "block";
-                document.getElementById("nav-username").textContent = username;
-                document.getElementById("nav-profile-pic").src = profilePic || "/images/default-profile.png";
-            }
+            const accountTab = document.getElementById("account-tab");
+            accountTab.innerHTML = `
+        <div class="dropdown">
+          <a href="account.html" class="dropdown-toggle">
+            <img src="${profilePic || '/images/default-profile.png'}" class="nav-profile-img" alt="Profile" />
+            <span>${username}</span>
+          </a>
+          <ul class="dropdown-menu">
+            <li><a href="account.html">View Profile</a></li>
+            <li><a href="logout.html">Sign Out</a></li>
+          </ul>
+        </div>
+      `;
         }
     </script>
 </body>
