--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="alanai_chatbot/chat-widget.css" />
 </head>
 
-<body class="index">
+<body class="forum-page">
     <header class="sticky-header">
         <div class="header-inner">
             <div class="header-left">
