--- a/frontend/forum/comments.html
+++ b/frontend/forum/comments.html
@@ -5,24 +5,35 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Post & Replies - Ultramarathon Connect</title>
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="alanai_chatbot/chat-widget.css" />
+    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="/alanai_chatbot/chat-widget.css" />
 </head>
 
 <body class="forum-page">
     <header class="sticky-header">
         <div class="header-inner">
             <div class="header-left">
-                <img src="ultra.png" alt="Ultramarathon Connect Logo" class="logo" />
+                <img src="/ultra.png" alt="Ultramarathon Connect Logo" class="logo" />
                 <span class="site-title">UltramarathonConnect</span>
             </div>
             <button class="menu-toggle">☰</button>
             <nav class="header-right">
                 <ul class="menu">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="race_directory.html">Race Directory</a></li>
-                    <li><a href="forum.html">Runner Community</a></li>
-                    <li id="account-tab" class="auth-tab"><a href="login.html">Login</a></li>
+                    <li><a href="/index.html">Home</a></li>
+                    <li><a href="/race_directory.html">Race Directory</a></li>
+                    <li><a href="/forum.html">Runner Community</a></li>
+                    <li id="account-tab" class="auth-tab"><a href="/login.html">Login</a></li>
+                    <li class="dropdown auth-dropdown" style="display: none;">
+                        <a href="/account.html">
+                            <img id="nav-profile-pic" src="/images/default-profile.png" alt="Profile"
+                                class="nav-profile-img" />
+                            <span id="nav-username">My Account</span>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a href="/account.html">View Profile</a></li>
+                            <li><a href="/logout.html">Sign Out</a></li>
+                        </ul>
+                    </li>
                 </ul>
             </nav>
         </div>
@@ -46,7 +57,7 @@
         </section>
     </main>
 
-    <!-- Alan Chat -->
+    <!-- Alan Chat Widget -->
     <div id="alan-bubble">💬</div>
     <div id="alan-window">
         <div id="alan-messages"></div>
@@ -58,18 +69,18 @@
 
     <footer class="site-footer">
         <div class="footer-links">
-            <a href="contact.html">Contact Us</a> |
-            <a href="privacy.html">Privacy Policy</a> |
-            <a href="termsofservice.html">Terms of Service</a> |
-            <a href="faq.html">FAQ</a> |
+            <a href="/contact.html">Contact Us</a> |
+            <a href="/privacy.html">Privacy Policy</a> |
+            <a href="/termsofservice.html">Terms of Service</a> |
+            <a href="/faq.html">FAQ</a> |
             <span>Email: <a href="mailto:ultramarathonconnect@gmail.com">ultramarathonconnect@gmail.com</a></span>
         </div>
         <p class="footer-copy">&copy; 2025 Ultramarathon Connect. All rights reserved.</p>
     </footer>
 
-    <script src="comments_script.js"></script>
-    <script src="index_script.js"></script>
-    <script src="alanai_chatbot/alan.js"></script>
+    <script src="/comments_script.js"></script>
+    <script src="/index_script.js"></script>
+    <script src="/alanai_chatbot/alan.js"></script>
 
     <!-- Inject dropdown if logged in -->
     <script>
@@ -78,19 +89,13 @@
         const profilePic = localStorage.getItem("profilePicture");
 
         if (token && username) {
-            const accountTab = document.getElementById("account-tab");
-            accountTab.innerHTML = `
-        <div class="dropdown">
-          <a href="account.html" class="dropdown-toggle">
-            <img src="${profilePic || '/images/default-profile.png'}" class="nav-profile-img" alt="Profile" />
-            <span>${username}</span>
-          </a>
-          <ul class="dropdown-menu">
-            <li><a href="account.html">View Profile</a></li>
-            <li><a href="logout.html">Sign Out</a></li>
-          </ul>
-        </div>
-      `;
+            document.querySelector(".auth-tab").style.display = "none";
+            const dropdown = document.querySelector(".auth-dropdown");
+            if (dropdown) {
+                dropdown.style.display = "block";
+                document.getElementById("nav-username").textContent = username;
+                document.getElementById("nav-profile-pic").src = profilePic || "/images/default-profile.png";
+            }
         }
     </script>
 </body>
