--- a/frontend/forum/group_forum.html
+++ b/frontend/forum/group_forum.html
@@ -23,6 +23,7 @@
                     <li><a href="/race_directory.html">Race Directory</a></li>
                     <li><a href="/forum.html">Runner Community</a></li>
                     <li id="account-tab" class="auth-tab"><a href="/login.html">Login</a></li>
+                    <li class="auth-dropdown" style="display: none;"></li>
                 </ul>
             </nav>
         </div>
@@ -85,12 +86,22 @@
 
         // Show logged-in header
         if (token && username) {
-            document.querySelector(".auth-tab").style.display = "none";
+            const accountTab = document.getElementById("account-tab");
+            accountTab.style.display = "none";
+
             const dropdown = document.querySelector(".auth-dropdown");
             if (dropdown) {
                 dropdown.style.display = "block";
-                document.getElementById("nav-username").textContent = username;
-                document.getElementById("nav-profile-pic").src = profilePic || "/images/default-profile.png";
+                dropdown.innerHTML = `
+            <a href="/account.html" class="dropdown-toggle">
+                <img src="${profilePic || '/images/default-profile.png'}" class="nav-profile-img" alt="Profile" />
+                <span>${username}</span>
+            </a>
+            <ul class="dropdown-menu">
+                <li><a href="/account.html">View Profile</a></li>
+                <li><a href="/logout.html">Sign Out</a></li>
+            </ul>
+        `;
             }
         }
 
@@ -241,7 +252,7 @@
                 .then(data => {
                     const joined = data?.user?.joinedGroups || [];
                     const cleanGroup = decodeURIComponent(groupName).trim();
-                    const hasJoined = joined.includes(cleanGroup);
+                    const hasJoined = joined.some(g => g.trim().toLowerCase() === cleanGroup.toLowerCase());
 
                     if (!hasJoined) {
                         form.style.display = "none";
