--- a/frontend/forum/group_forum.html
+++ b/frontend/forum/group_forum.html
@@ -23,12 +23,10 @@
                     <li><a href="/race_directory.html">Race Directory</a></li>
                     <li><a href="/forum.html">Runner Community</a></li>
                     <li id="account-tab" class="auth-tab"><a href="/login.html">Login</a></li>
-                    <li class="auth-dropdown" style="display: none;"></li>
                 </ul>
             </nav>
         </div>
     </header>
-
 
     <main class="forum-wrapper">
         <h1 id="group-title" class="forum-heading">Training Group</h1>
@@ -87,21 +85,19 @@
         // Show logged-in header
         if (token && username) {
             const accountTab = document.getElementById("account-tab");
-            accountTab.style.display = "none";
-
-            const dropdown = document.querySelector(".auth-dropdown");
-            if (dropdown) {
-                dropdown.style.display = "block";
-                dropdown.innerHTML = `
-            <a href="/account.html" class="dropdown-toggle">
-                <img src="${profilePic || '/images/default-profile.png'}" class="nav-profile-img" alt="Profile" />
-                <span>${username}</span>
-            </a>
-            <ul class="dropdown-menu">
-                <li><a href="/account.html">View Profile</a></li>
-                <li><a href="/logout.html">Sign Out</a></li>
-            </ul>
-        `;
+            if (accountTab) {
+                accountTab.innerHTML = `
+                <div class="dropdown">
+                    <a href="/account.html" class="dropdown-toggle">
+                        <img src="${profilePic || '/images/default-profile.png'}" class="nav-profile-img" alt="Profile" />
+                        <span>${username}</span>
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a href="/account.html">View Profile</a></li>
+                        <li><a href="/logout.html">Sign Out</a></li>
+                    </ul>
+                </div>
+                `;
             }
         }
 
@@ -110,7 +106,7 @@
             postsEl.innerHTML = "<p style='text-align:center;'>Invalid group URL.</p>";
         } else {
             titleEl.textContent = `${groupName} Training Group`;
-            fetchGroupPosts();
+            // fetchGroupPosts(); ← make sure this function is defined elsewhere if needed
         }
 
         async function fetchGroupPosts() {
